Refactor checkout page to use bindings-driven architecture, consolidate modules
Major refactor of the payment checkout system from imperative DOM manipulation
to a declarative bindings-driven architecture using webManager.bindings().

Key changes:
- Replace manual DOM updates (ui.js, ui-bindings.js) with a single
  buildBindingsState() function that derives all UI state from minimal
  mutable state
- Consolidate 10+ checkout modules into 5 (state, api, discount, pricing,
  tracking) by removing constants, session, processors, payment-request,
  and individual processor modules (stripe, paypal, chargebee, coinbase)
- Move payment processing server-side: checkout now creates a payment intent
  via API and redirects to the processor's hosted checkout URL
- Switch API calls to use authorized-fetch and webManager.getApiUrl() instead
  of hardcoded URLs and manual token handling
- Fetch app config (products + processors) from a single /backend-manager/app
  endpoint instead of separate get-app call with client-side transformation
- Add payment processor config to _config.yml defaults (stripe, paypal,
  chargebee, coinbase) and expose recaptcha config in foot.html
- Redesign checkout HTML layout with mobile-friendly accordion sections,
  sticky order summary, and improved responsive behavior
- Extract analytics tracking into dedicated tracking.js module
- Add dev tools panel for testing different products/frequencies in development
- Rename _test_ query params to _dev_ prefix across checkout, account, and
  README documentation
- Rename billing-cycle/billingCycle to frequency throughout
- Rename "Starter" plan to "Plus" in default pricing layout
- Various core JS cleanup: remove unused imports, simplify query-string
  handling, modernize cookie consent and exit popup modules
- Bump version to 0.0.260

--- a/src/defaults/src/_config.yml
+++ b/src/defaults/src/_config.yml
@@ -133,6 +133,21 @@ web_manager:
       autoRequest: 1000 * 60
   validRedirectHosts: []
 
+# Payment
+payment:
+  processors:
+    stripe:
+      publishableKey: null
+    paypal:
+      clientId: null
+    chargebee:
+      site: null
+    coinbase:
+      enabled: false
+
+# OAuth2
+oauth2:
+
 # Socials
 socials:
   facebook: null
